<resources>
    <string name="app_name">Profile Section</string>
    <string name="andaz_kumar">andaz Kumar</string>
    <string name="member_register">member since Dec, 2020</string>
    <string name="get_to_know_your_vehicles_inside_out">get to know your vehicles, inside out</string>
    <string name="cred_garage">CRED garage</string>
    <string name="credit_score">credit score</string>
    <string name="refresh_available">REFRESH AVAILABLE</string>
    <string name="_757">757</string>
    <string name="lifetime_cashback">lifetime cashback</string>
    <string name="_3">₹3</string>
    <string name="bank_balance">bank balance</string>
    <string name="check">check</string>
    <string name="your_rewards_benefits"><![CDATA[YOUR REWARDS & BENEFITS]]></string>
    <string name="cashback_balance">cashback balance</string>
    <string name="_0">₹0</string>
    <string name="transactions_support"><![CDATA[TRANSACTIONS & SUPPORT]]></string>
    <string name="win_upto_rs_1000">win upto Rs 1000</string>
    <string name="refer_and_earn">refer and earn</string>
    <string name="all_transactions">all transactions</string>
    <string name="coins">coins</string>
    <string name="_26_46_583">26,46,583</string>
</resources>